hive-macro/tests/macro/hive/should_fail/attribute_disallowed.stderr
error: This macro does not support attributes
 --> tests/macro/hive/should_fail/attribute_disallowed.rs:1:20
  |
1 | #[hive_macro::hive(disallowed_attribute = 1)]
  |                    ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: Remove any macro attributes
